recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: type mismatch;
 found   : Int(1)
 required: String
    setCouleur(getCouleur()+1)
                            ^